# hacks

./: .env.example  .gitignore  AGENTS.md  BRIEF.md  README.md  Use watsonx and ibm_granite-13b-instruct-v2 to ana.ipynb  pyproject.toml
.bob/: haks-rules.md
.bob/rules-advanced/: AGENTS.md
.bob/rules-ask/: AGENTS.md
.bob/rules-code/: AGENTS.md
.bob/rules-plan/: AGENTS.md
Docs/: Analyse.md  Architecture.md  Executive_Summary.md  Hackathon_Analysis.md  IdeesModeles.md  Implementation.md  Methodologie.md  Plan_Implementation.md  Ressources.md  Strategie_Paires.md  UseCase.md  project-development.md
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
input/: corrosions_training.csv  structure.md  test.csv
output/: .gitignore  20260611_160056_submission.csv  historique.md
src/algo/: evaluate.py  explore_datasets.py  pair_features.py  predict.py  predict_hybrid.py  predict_pairs.py  predict_pure.py  step1_catboost.py  step2_tabpfn.py  step3_physics.py  step4_ensemble.py  submit_exceptions.py  submit_pairs.py  test_io.py  test_pipeline.py  test_timeseries.py  test_watsonx.py  train.py  train_and_predict.py  train_hybrid.py  train_pairs.py  train_pure.py
src/streamlit/: test_streamlit.py
src/utils/: features.py  io.py  ml.py  watsonx.py
