[project]
name = "hacks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.101.0",
    "ibm-watsonx-ai>=1.5.13",
    "kagglehub>=1.0.2",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
    "xgboost>=3.2.0",
    "catboost>=1.2",
]
